--- a/dynamic.html
+++ b/dynamic.html
@@ -17,7 +17,7 @@
                 <a href="index.html#header">
                     <picture class="logo">
                         <source class="source" srcset="images/Slider/logo_white.svg" media="(max-width: 960px)">
-                        <img src="/images/Home/logo.svg" alt="logo">
+                        <img src="images/Home/logo.svg" alt="logo">
                     </picture>
                 </a>
 
@@ -137,7 +137,7 @@
                     </p>
                 </div>
                 <div class="dynamic__right">
-                    <img src="/images/Slider/1.svg" alt="image">
+                    <img src="images/Slider/1.svg" alt="image">
                 </div>
             </div>
         </section>
@@ -150,7 +150,7 @@
 
                 <picture class="footer__logo">
                     <source srcset="images/Slider/logo_white-footer.svg" media="(max-width: 960px)">
-                    <img src="/images/Footer/footer-logo.svg" alt="logo">
+                    <img src="images/Footer/footer-logo.svg" alt="logo">
                 </picture>
 
                 <div class="footer__office">
@@ -165,9 +165,9 @@
                 <div class="footer__socials">
                     <h3>Socials</h3>
                     <div class="socials_line">
-                        <img src="/images/Footer/Instagram.svg" alt="Instagram">
-                        <img src="/images/Footer/linkedin.svg" alt="linkedin">
-                        <img src="/images/Footer/facebook.svg" alt="facebook">
+                        <img src="images/Footer/Instagram.svg" alt="Instagram">
+                        <img src="images/Footer/linkedin.svg" alt="linkedin">
+                        <img src="images/Footer/facebook.svg" alt="facebook">
                     </div>
                 </div>
 
