--- a/civil.html
+++ b/civil.html
@@ -17,7 +17,7 @@
                 <a href="index.html#header">
                 <picture class="logo">
                     <source class="source" srcset="images/Slider/logo_black.svg" media="(max-width: 1148px)">
-                    <img src="/images/Home/logo.svg" alt="logo">
+                    <img src="images/Home/logo.svg" alt="logo">
                 </picture>
                 </a>
                 <div class="burger">
@@ -124,7 +124,7 @@
                     </ul>
                 </div>
                 <div class="civil__service__right">
-                    <img src="/images/Slider/4.svg" alt="image">
+                    <img src="images/Slider/4.svg" alt="image">
                 </div>
             </div>
         </section>
@@ -136,7 +136,7 @@
 
                 <picture class="footer__logo">
                     <source srcset="images/Slider/logo_black-footer.svg" media="(max-width: 1148px)">
-                    <img src="/images/Footer/footer-logo.svg" alt="logo">
+                    <img src="images/Footer/footer-logo.svg" alt="logo">
                 </picture>
 
                 <div class="footer__office">
@@ -153,15 +153,15 @@
                     <div class="socials_line">
                         <picture>
                             <source srcset="images/Slider/instagram-black.svg" media="(max-width: 1148px)">
-                            <img src="/images/Footer/Instagram.svg" alt="Instagram">
+                            <img src="images/Footer/Instagram.svg" alt="Instagram">
                         </picture>
                         <picture>
                             <source srcset="images/Slider/in-black.svg" media="(max-width: 1148px)">
-                            <img src="/images/Footer/linkedin.svg" alt="linkedin">
+                            <img src="images/Footer/linkedin.svg" alt="linkedin">
                         </picture>
                         <picture>
                             <source srcset="images/Slider/facebook-black.svg" media="(max-width: 1148px)">
-                            <img src="/images/Footer/facebook.svg" alt="facebook">
+                            <img src="images/Footer/facebook.svg" alt="facebook">
                         </picture>
                     </div>
                 </div>
