--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Ynanch Hyzmat</title>
 
 </head>
@@ -19,7 +19,7 @@
                         <div class="header__flex">
                             <div class="header__nav">
 
-                                <img src="/images/Home/logo.svg" alt="logo">
+                                <img src="images/Home/logo.svg" alt="logo">
 
                                 <div class="burger">
                                     <div class="line line1"></div>
@@ -51,7 +51,7 @@
                                 </div>
 
                                 <div class="header__body__brend">
-                                    <img src="/images/Home/brend.svg" alt="brend-logo">
+                                    <img src="images/Home/brend.svg" alt="brend-logo">
                                 </div>
                             </div>
 
@@ -63,7 +63,7 @@
                                     <p>
                                         Scroll to discover
                                     </p>
-                                    <img src="/images/Home/arrow-down.svg" alt="down">
+                                    <img src="images/Home/arrow-down.svg" alt="down">
                                 </div>
                             </div>
                         </div>
@@ -156,14 +156,14 @@
                                     <div class="statistic__block_column1">
                                         <div class="statistic__block stat1">
                                             <div class="statistic__block__img">
-                                                <img src="/images/Who we are/est.svg" alt="image">
+                                                <img src="images/Who we are/est.svg" alt="image">
                                             </div>
                                             <span>2016</span>
                                             <p>Year of Establishment</p>
                                         </div>
                                         <div class="statistic__block stat1">
                                             <div class="statistic__block__img">
-                                                <img src="/images/Who we are/people.svg" alt="image">
+                                                <img src="images/Who we are/people.svg" alt="image">
                                             </div>
                                             <span>90+</span>
                                             <p>Professional Employees</p>
@@ -174,7 +174,7 @@
                                     <div class="statistic__block_column2">
                                         <div class="statistic__block stat2">
                                             <div class="statistic__block__img">
-                                                <img src="/images/Who we are/check.svg" alt="image">
+                                                <img src="images/Who we are/check.svg" alt="image">
                                             </div>
                                             <span>152</span>
                                             <p>Projects Completed</p>
@@ -182,7 +182,7 @@
 
                                         <div class="statistic__block stat2">
                                             <div class="statistic__block__img">
-                                                <img src="/images/Who we are/hand.svg" alt="image">
+                                                <img src="images/Who we are/hand.svg" alt="image">
                                             </div>
                                             <span>300+</span>
                                             <p>Business Partners</p>
@@ -205,7 +205,7 @@
                             <div class="services__body">
                                 <div class="services__footer_mobile">
                                     <img class="mobile_img" width="300px"
-                                        src="/images/Services We Offer/service_mobile.svg" alt="image">
+                                        src="images/Services We Offer/service_mobile.svg" alt="image">
                                 </div>
                                 <div class="services__body__footer">
                                     <p>ES Ynach Hyzmat provides a wide range of services to meet customer’s needs.
@@ -218,11 +218,11 @@
                                 </div>
                             </div>
                             <div class="services__footer">
-                                <img src="/images/Services We Offer/1.svg" alt="image">
-                                <img src="/images/Services We Offer/2.svg" alt="image">
-                                <img src="/images/Services We Offer/3.svg" alt="image">
-                                <img src="/images/Services We Offer/4.svg" alt="image">
-                                <img src="/images/Services We Offer/5.svg" alt="image">
+                                <img src="images/Services We Offer/1.svg" alt="image">
+                                <img src="images/Services We Offer/2.svg" alt="image">
+                                <img src="images/Services We Offer/3.svg" alt="image">
+                                <img src="images/Services We Offer/4.svg" alt="image">
+                                <img src="images/Services We Offer/5.svg" alt="image">
                             </div>
                         </div>
                     </div>
@@ -254,7 +254,7 @@
                                             <div class="fade_hidden">
 
                                                 <img class="text_img_fade text_fade feauturingIndex"
-                                                    src="/images/Slider/Ynanch Hyzmat.svg" alt="image">
+                                                    src="images/Slider/Ynanch Hyzmat.svg" alt="image">
                                             </div>
                                             <h2 class="fade_hidden">
                                                 <span class="text_h2_fade text_fade feauturingIndex">
@@ -270,7 +270,7 @@
                                         <div class="feauturing__body__right" data-swiper-parallax="300"
                                             data-swiper-parallax-opacity="0" data-swiper-parallax-scale="0.5"
                                             data-swiper-parallax-duration="2000">
-                                            <img src="/images/Slider/1.svg" alt="">
+                                            <img src="images/Slider/1.svg" alt="">
                                         </div>
                                     </div>
 
@@ -307,7 +307,7 @@
                                             <div class="fade_hidden">
 
                                                 <img class="pipeline__text_img_fade pipeline__text_fade"
-                                                    src="/images/Slider/Ynanch Hyzmat.svg" alt="image">
+                                                    src="images/Slider/Ynanch Hyzmat.svg" alt="image">
                                             </div>
                                             <h2 class="fade_hidden">
                                                 <span class="pipeline__text_h2_fade pipeline__text_fade">
@@ -321,7 +321,7 @@
                                         <div class="feauturing__body__right" data-swiper-parallax="300"
                                             data-swiper-parallax-opacity="0" data-swiper-parallax-scale="0.5"
                                             data-swiper-parallax-duration="2000">
-                                            <img src="/images/Slider/2.svg" alt="image">
+                                            <img src="images/Slider/2.svg" alt="image">
                                         </div>
                                     </div>
 
@@ -356,7 +356,7 @@
                                                                 <div class="fade_hidden">
 
                                                                     <img class="envi__text_img_fade envi__text_fade"
-                                                                        src="/images/Slider/Ynanch Hyzmat.svg"
+                                                                        src="images/Slider/Ynanch Hyzmat.svg"
                                                                         alt="image">
                                                                 </div>
                                                                 <h2 class="fade_hidden">
@@ -375,7 +375,7 @@
                                                                 data-swiper-parallax-opacity="0"
                                                                 data-swiper-parallax-scale="0.5"
                                                                 data-swiper-parallax-duration="2000">
-                                                                <img src="/images/Slider/3.svg" alt="image">
+                                                                <img src="images/Slider/3.svg" alt="image">
                                                             </div>
                                                         </div>
 
@@ -410,7 +410,7 @@
                                                             <div class="fade_hidden">
 
                                                                 <img class="civil__text_img_fade civil__text_fade"
-                                                                    src="/images/Slider/Ynanch Hyzmat_black.svg"
+                                                                    src="images/Slider/Ynanch Hyzmat_black.svg"
                                                                     alt="image">
                                                             </div>
                                                             <h2 class="fade_hidden">
@@ -426,7 +426,7 @@
                                                             data-swiper-parallax-opacity="0"
                                                             data-swiper-parallax-scale="0.5"
                                                             data-swiper-parallax-duration="2000">
-                                                            <img src="/images/Slider/4.svg" alt="image">
+                                                            <img src="images/Slider/4.svg" alt="image">
                                                         </div>
                                                     </div>
 
@@ -462,7 +462,7 @@
                                                             <div class="fade_hidden">
 
                                                                 <img class="oil__text_img_fade text_fade"
-                                                                    src="/images/Slider/Ynanch Hyzmat.svg" alt="image">
+                                                                    src="images/Slider/Ynanch Hyzmat.svg" alt="image">
                                                             </div>
                                                             <h2 class="fade_hidden">
                                                                 <span class="oil__text_h2_fade text_fade">
@@ -477,7 +477,7 @@
                                                             data-swiper-parallax-opacity="0"
                                                             data-swiper-parallax-scale="0.5"
                                                             data-swiper-parallax-duration="2000">
-                                                            <img src="/images/Slider/5.svg" alt="image">
+                                                            <img src="images/Slider/5.svg" alt="image">
                                                         </div>
                                                     </div>
 
@@ -1063,7 +1063,7 @@
                                                     </p>
                                                 </div>
                                                 <div class="work__images__block">
-                                                    <img class="work_image" src="/images/We Work With/group-logo.png"
+                                                    <img class="work_image" src="images/We Work With/group-logo.png"
                                                         alt="image">
                                                 </div>
                                             </div>
@@ -1077,7 +1077,7 @@
                                         <div class="footer__grid">
 
                                             <div class="footer__logo">
-                                                <img src="/images/Footer/footer-logo.svg" alt="logo">
+                                                <img src="images/Footer/footer-logo.svg" alt="logo">
                                             </div>
 
                                             <div class="footer__office">
@@ -1092,9 +1092,9 @@
                                             <div class="footer__socials">
                                                 <h3>Socials</h3>
                                                 <div class="socials_line">
-                                                    <img src="/images/Footer/Instagram.svg" alt="Instagram">
-                                                    <img src="/images/Footer/linkedin.svg" alt="linkedin">
-                                                    <img src="/images/Footer/facebook.svg" alt="facebook">
+                                                    <img src="images/Footer/Instagram.svg" alt="Instagram">
+                                                    <img src="images/Footer/linkedin.svg" alt="linkedin">
+                                                    <img src="images/Footer/facebook.svg" alt="facebook">
                                                 </div>
                                             </div>
 
@@ -1205,7 +1205,7 @@
                     </div>
 
                     <script src="js/swiper-bundle.min.js"></script>
-                    <script src="/js/script.js"></script>
+                    <script src="js/script.js"></script>
 
 </body>
 
