--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                         <div class="form_column4">
                                             <label for="email">Email*:</label>
                                             <input id="email" name="email" type="email" class="_req email"
-                                            placeholder="info@ynanchyzmat.com">
+                                                placeholder="info@ynanchyzmat.com">
                                         </div>
 
                                     </div>
@@ -1008,7 +1008,7 @@
                                                 <img src="images/Map/34.png" alt="image">
                                             </div>
 
-                                           
+
 
 
 
@@ -1155,7 +1155,9 @@
 
                         <div class="envi-modal__mobile">
                             <p>
-                                Since YH did not provide a separate <u>environment protection service</u>, we would like to draw your attention to the range of services that we provided to the customer, among which this service is included.
+                                Since YH did not provide a separate <u>environment protection service</u>, we would like
+                                to draw your attention to the range of services that we provided to the customer, among
+                                which this service is included.
                             </p>
 
                             <img src="images/Map/34.png" alt="image">
@@ -1177,7 +1179,9 @@
 
                         <div class="oil-modal__mobile">
                             <p>
-                                Since YH did not provide a separate <u>oilfield service</u>, we would like to draw your attention to the range of services that we provided to the customer, among which this service is included.
+                                Since YH did not provide a separate <u>oilfield service</u>, we would like to draw your
+                                attention to the range of services that we provided to the customer, among which this
+                                service is included.
                             </p>
 
                             <img src="images/Map/34.png" alt="image">
@@ -1202,10 +1206,20 @@
                             <img src="images/Map/21.png" alt="image">
                             <img src="images/Map/20.png" alt="image">
                         </div>
-                    </div>
+
+
+
+
+
+    </div>
+
+
 
                     <script src="js/swiper-bundle.min.js"></script>
                     <script src="js/script.js"></script>
+
+
+
 
 </body>
 
