--- a/index.html
+++ b/index.html
@@ -513,18 +513,48 @@
                                                 data-swiper-parallax-opacity="0" data-swiper-parallax-duration="1500">
 
                                                 <div class="map-mobile__block">
-                                                    <div class="map-mobile_img column1"><img class="dynamic_mobile-btn"
-                                                            src="images/Map/map-mobile1.svg" alt="image"></div>
-                                                    <div class="map-mobile_img column2"><img class="pipeline_mobile-btn"
-                                                            src="images/Map/map-mobile2.svg" alt="image"></div>
-                                                    <div class="map-mobile_img column1"><img class="envi_mobile-btn"
-                                                            src="images/Map/map-mobile3.svg" alt="image"></div>
-                                                    <div class="map-mobile_img column2"><img class="civil_mobile-btn"
-                                                            src="images/Map/map-mobile4.svg" alt="image"></div>
-                                                    <div class="map-mobile_img column1"><img class="oil_mobile-btn"
-                                                            src="images/Map/map-mobile5.svg" alt="image"></div>
-                                                    <div class="map-mobile_img column2"><img class="company_mobile-btn"
-                                                            src="images/Map/map-mobile6.svg" alt="image"></div>
+                                                    <div class="map-mobile_img column1">
+                                                        <picture>
+                                                            <source srcset="images/Map/map-mobile390(1).svg" media="(max-width: 470px)">
+                                                            <source srcset="images/Map/map-mobile600(1).svg" media="(max-width: 600px)">
+                                                            <img class="dynamic_mobile-btn" src="images/Map/map-mobile1.svg" alt="image">
+                                                        </picture>
+                                                    </div>
+                                                    <div class="map-mobile_img column2">
+                                                        <picture>
+                                                            <source srcset="images/Map/map-mobile390(2).svg" media="(max-width: 470px)">
+                                                            <source srcset="images/Map/map-mobile600(2).svg" media="(max-width: 600px)">
+                                                            <img class="pipeline_mobile-btn" src="images/Map/map-mobile2.svg" alt="image">
+                                                        </picture>
+                                                    </div>
+                                                    <div class="map-mobile_img column1">
+                                                        <picture>
+                                                            <source srcset="images/Map/map-mobile390(3).svg" media="(max-width: 470px)">
+                                                            <source srcset="images/Map/map-mobile600(3).svg" media="(max-width: 600px)">
+                                                            <img class="envi_mobile-btn" src="images/Map/map-mobile3.svg" alt="image">
+                                                        </picture>
+                                                    </div>
+                                                    <div class="map-mobile_img column2">
+                                                        <picture>
+                                                            <source srcset="images/Map/map-mobile390(4).svg" media="(max-width: 470px)">
+                                                            <source srcset="images/Map/map-mobile600(4).svg" media="(max-width: 600px)">
+                                                            <img class="civil_mobile-btn" src="images/Map/map-mobile4.svg" alt="image">
+                                                        </picture>
+                                                    </div>
+                                                    <div class="map-mobile_img column1">
+                                                        <picture>
+                                                            <source srcset="images/Map/map-mobile390(5).svg" media="(max-width: 470px)">
+                                                            <source srcset="images/Map/map-mobile600(5).svg" media="(max-width: 600px)">
+                                                            <img class="oil_mobile-btn" src="images/Map/map-mobile5.svg" alt="image">
+                                                        </picture>
+                                                    </div>
+                                                    <div class="map-mobile_img column2">
+                                                        <picture>
+                                                            <source srcset="images/Map/map-mobile390(6).svg" media="(max-width: 470px)">
+                                                            <source srcset="images/Map/map-mobile600(6).svg" media="(max-width: 600px)">
+                                                            <img class="company_mobile-btn" src="images/Map/map-mobile6.svg" alt="image">
+                                                        </picture>
+                                                    </div>
                                                 </div>
 
                                                 <svg class="svg" width="1156" height="828" viewBox="0 0 1156 828"
