--- a/index.html
+++ b/index.html
@@ -1112,9 +1112,10 @@
 
                                             <div class="footer__office">
                                                 <h3>Head Office</h3>
-                                                <p>"Sport" Business Center<br>
-                                                    (Bldg.7), Olympic town,<br>
-                                                    Ashgabat, 744000<br>
+                                                <p>
+                                                    "Sport" Business Center
+                                                    (Bldg.7), Olympic town,
+                                                    Ashgabat, 744000
                                                     Turkmenistan.
                                                 </p>
                                             </div>
@@ -1130,7 +1131,7 @@
 
                                             <div class="footer__iquiries">
                                                 <h3>Inquiries</h3>
-                                                <p>For any inquiries, questions<br>or commendations, please<br>call:
+                                                <p>For any inquiries, questions or commendations, please call:
                                                     +993 (12) 46 29
                                                     37<br>
                                                     info@ynanchyzmat.com
