--- a/index.html
+++ b/index.html
@@ -1131,10 +1131,8 @@
 
                                             <div class="footer__iquiries">
                                                 <h3>Inquiries</h3>
-                                                <p>For any inquiries, questions or commendations, please call:
-                                                    +993 (12) 46 29
-                                                    37<br>
-                                                    info@ynanchyzmat.com
+                                                <p>For any inquiries, questions or commendations, please call: +993 (12) 46 29
+                                                    37<br>info@ynanchyzmat.com
                                                 </p>
                                             </div>
                                             <div class="footer__company-name">
