--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@
                                                 <img src="images/Footer/footer-logo.svg" alt="logo">
                                             </div>
 
-                                            <div class="footer__office">
+                                            <address class="footer__office">
                                                 <h3>Head Office</h3>
                                                 <p>
                                                     "Sport" Business Center
@@ -1118,23 +1118,23 @@
                                                     Ashgabat, 744000
                                                     Turkmenistan.
                                                 </p>
-                                            </div>
+                                            </address>
 
-                                            <div class="footer__socials">
+                                            <address class="footer__socials">
                                                 <h3>Socials</h3>
                                                 <div class="socials_line">
                                                     <img src="images/Footer/Instagram.svg" alt="Instagram">
                                                     <img src="images/Footer/linkedin.svg" alt="linkedin">
                                                     <img src="images/Footer/facebook.svg" alt="facebook">
                                                 </div>
-                                            </div>
+                                            </address>
 
-                                            <div class="footer__iquiries">
+                                            <address class="footer__iquiries">
                                                 <h3>Inquiries</h3>
-                                                <p>For any inquiries, questions or commendations, please call: +993 (12) 46 29
-                                                    37<br>info@ynanchyzmat.com
+                                                <p>For any inquiries, questions or commendations, please call: <a href="tel:+99312462937">+993 (12) 46 29
+                                                    37</a><br><a href="mailto:info@ynanchyzmat.com">info@ynanchyzmat.com</a>
                                                 </p>
-                                            </div>
+                                            </address>
                                             <div class="footer__company-name">
                                                 <p>
                                                     ES “Ynanch Hyzmat”, 2023.
