--- a/index.html
+++ b/index.html
@@ -1131,7 +1131,7 @@
 
                                             <address class="footer__iquiries">
                                                 <h3>Inquiries</h3>
-                                                <p>For any inquiries, questions or commendations, please call: <a href="tel:+99312462937">+993 (12) 46 29
+                                                <p>For any inquiries, questions or commendations, please call:<br><a href="tel:+99312462937">+993 (12) 46 29
                                                     37</a><br><a href="mailto:info@ynanchyzmat.com">info@ynanchyzmat.com</a>
                                                 </p>
                                             </address>
